--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,10 +1,9 @@
-<div *ngIf="messageService.messages.length">
+<div class="row top-buffer">
+  <div *ngIf="messageService.messages.length" class="col-xl-12">
 
-  <h2>Messages</h2>
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
+    <div *ngFor='let message of messageService.messages'> {{message}} </div>
 
+  </div>
 </div>
 
 
