--- a/src/app/result-search/result-search.component.html
+++ b/src/app/result-search/result-search.component.html
@@ -1,24 +1,38 @@
-<div id="search-component">
-  <h4>Result Search</h4>
+  <div id="search-component">
 
-  <input #searchBox id="search-box"  />
-  <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="search(searchBox.value)">
-    Search
-  </button>
-  <ul class="results">
-    <li *ngFor="let result of (response ? response.results : [])">
-      <a href="{{result.Uri}}" target="_blank" >
-        <span class="badge">{{result.title}}</span>
+    <div class="container-fluid ">
 
-      </a>
-    </li>
-  </ul>
-</div>
+      <div class="row top-buffer">
+        <div class="input-group col-xl-3">
+          <input type="text" #searchBox class="form-control" placeholder="Type your search here..." aria-label="Type your search here..." aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" (click)="search(searchBox.value)">Search</button>
+          </div>
+        </div>
+      </div>
+        <app-messages></app-messages>
+      <div class="row top-buffer">
+        <div *ngFor="let result of (response ? response.results : [])" class="result col-xl-12 mx-auto border border-info rounded">
+
+          <a href="{{result.Uri}}" target="_blank" >
+            <h3 class="pt__title">
+              <span class="badge">{{result.title}}</span>
+            </h3>
+            <div>{{result.Excerpt}}</div>
+            <div>Score: {{result.score}}</div>
+          </a>
+
+        </div>
+      </div>
+    </div>
 
 
-<!--
-Copyright 2017-2018 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
+
+  </div>
+
+
+  <!--
+  Copyright 2017-2018 Google Inc. All Rights Reserved.
+  Use of this source code is governed by an MIT-style license that
+  can be found in the LICENSE file at http://angular.io/license
+  -->
