--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-/* Application-wide Styles */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
@@ -21,3 +22,5 @@ body, input[text], button {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.top-buffer { margin-top:20px; }
