--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,11 +1,29 @@
 /* ResultSearch private styles */
-.result{
+.result {
   margin-bottom: 30px;
   padding: 30px;
-  background-color: azure;
+/ / background-color: azure;
 }
+
 .result:hover {
-  background-color: beige;
+/ / background-color: beige;
+}
+
+.word-wrap {
+  word-wrap: break-word;
+  min-height: 99px;
+}
+
+.block {
+  padding: 25px;
+}
+
+.margin-buffer {
+  margin: 15px;
+}
+
+.image {
+  text-align: center;
 }
 
 a {
@@ -16,7 +34,7 @@ a {
   border-bottom: 1px solid gray;
   border-left: 1px solid gray;
   border-right: 1px solid gray;
-  width:195px;
+  width: 195px;
   height: 16px;
   padding: 5px;
   background-color: white;
@@ -37,20 +55,20 @@ a {
 .search-result li a:hover {
   color: white;
 }
+
 .search-result li a:active {
   color: white;
 }
+
 #search-box {
   width: 200px;
   height: 20px;
 }
 
-
 ul.search-result {
   margin-top: 0;
   padding-left: 0;
 }
-
 
 /*
 Copyright 2017-2018 Google Inc. All Rights Reserved.
