--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,77 +1,22 @@
-/* ResultSearch private styles */
+/* Search private styles */
 .result {
   margin-bottom: 30px;
   padding: 30px;
-/ / background-color: azure;
-}
-
-.result:hover {
-/ / background-color: beige;
 }
 
 .word-wrap {
   word-wrap: break-word;
-  min-height: 99px;
+  min-height: 66px;
 }
-
-.block {
-  padding: 25px;
-}
-
-.margin-buffer {
-  margin: 15px;
-}
-
-.image {
-  text-align: center;
+.line-through{
+  text-decoration: line-through;
 }
 
 a {
   text-decoration: none;
 }
 
-.search-result li {
-  border-bottom: 1px solid gray;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-  width: 195px;
-  height: 16px;
-  padding: 5px;
-  background-color: white;
-  cursor: pointer;
-  list-style-type: none;
-}
 
-.search-result li:hover {
-  background-color: #607D8B;
+.block{
+  padding:20px;
 }
-
-.search-result li a {
-  color: #888;
-  display: block;
-  text-decoration: none;
-}
-
-.search-result li a:hover {
-  color: white;
-}
-
-.search-result li a:active {
-  color: white;
-}
-
-#search-box {
-  width: 200px;
-  height: 20px;
-}
-
-ul.search-result {
-  margin-top: 0;
-  padding-left: 0;
-}
-
-/*
-Copyright 2017-2018 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
-*/
