--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+  text-align: center;
 }
 h2, h3 {
   color: #444;
@@ -23,4 +24,3 @@ body, input[text], button {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.top-buffer { margin-top:20px; }
